update post titles to be meaningful

--- a/_posts/2020-02-10-100-days-swift-day-2.md
+++ b/_posts/2020-02-10-100-days-swift-day-2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 100 Days of Swift, Day 2
+title: Swift Complex Data Types
 categories: swift
 date: 2020-02-10 11:50:00
 ---
