--- a/_posts/2020-02-11-100-days-swift-day-3.md
+++ b/_posts/2020-02-11-100-days-swift-day-3.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 100 Days of Swift, Day 3
+title: Swift Operators & Conditions
 categories: swift
 date: 2020-02-11 11:35:00
 ---
