--- a/_posts/2020-02-14-100-days-swift-day-6.md
+++ b/_posts/2020-02-14-100-days-swift-day-6.md
@@ -34,3 +34,5 @@ uploadObservation(taxon: "Boletus rubriceps") { pctDone in
 Finally, today's annoyance: why don't print statements inside closures show up as string output in the Swift Playgrounds for iPad output viewer? It makes debugging hard. The lack of a console output viewer is frustrating in Playgrounds , debugging order of operations is basically impossible.
 
 Also, related to my complaint about Ulysses auto-capitalizing text in code blocks: why does Ulysses autocorrect spelling in code blocks? 
+
+Test edit
