add author frontmatter

--- a/_posts/2020-02-20-100-days-swift-day-12.md
+++ b/_posts/2020-02-20-100-days-swift-day-12.md
@@ -3,6 +3,7 @@ layout: post
 title: Swift Optionals
 categories: swift
 date: 2020-02-20 13:46:16
+author: Alex Shepard
 ---
 
 Today I'm doing [100 Days of Swift](https://www.hackingwithswift.com/100) at 36,000 feet, flying from SF to New York, to go to a retreat with the Visipedia folks at Cornell Tech. The good news is that there's free WiFi on the flight, so I was able to watch the youtube videos. The bad news is that the 100 Days of Swift website is blocked, perhaps because of the word "hack" in the domain name? C'mon JetBlue, that's just silly.
