add author tags

--- a/_posts/2016-06-19-ipad-pro.md
+++ b/_posts/2016-06-19-ipad-pro.md
@@ -2,6 +2,7 @@
 layout: post
 title: "iPad Pro Initial Reaction: A Timeline"
 categories: ipad-pro
+author: alex
 ---
 I’ve had my iPad Pro for only about a week.
 
