--- a/_posts/2020-02-09-100-days-swift-day-1.md
+++ b/_posts/2020-02-09-100-days-swift-day-1.md
@@ -3,6 +3,7 @@ layout: post
 title: First Steps in Swift
 categories: swift
 date: 2020-02-09 21:21:10
+author: alex
 ---
 I'm tackling [100 Days of Swift](https://www.hackingwithswift.com/100) again. Last time I tried it, I got sidetracked by personal stuff and bailed after a few weeks.
 
