--- a/_posts/2020-02-12-100-days-swift-day-4.md
+++ b/_posts/2020-02-12-100-days-swift-day-4.md
@@ -3,6 +3,7 @@ layout: post
 title: Swift Loops
 categories: swift
 date: 2020-02-12 10:04:00
+author: alex
 ---
 
 I'm stuck in a loop, doing day 4 of [100 Days of Swift](https://www.hackingwithswift.com/100) again.
