--- a/_posts/2020-02-13-100-days-swift-day-5.md
+++ b/_posts/2020-02-13-100-days-swift-day-5.md
@@ -3,6 +3,7 @@ layout: post
 title: Swift Functions
 categories: swift
 date: 2020-02-13 08:13:57
+author: alex
 ---
 
 Onward to day 5 of [100 Days of Swift](https://www.hackingwithswift.com/100). Today was all about functions, and there were a few things that I didn't remember, mainly because I don't use them much when I code.
