--- a/_posts/2020-02-14-100-days-swift-day-6.md
+++ b/_posts/2020-02-14-100-days-swift-day-6.md
@@ -3,6 +3,7 @@ layout: post
 title: Closures, part 1
 categories: swift
 date: 2020-02-14 09:22:20
+author: alex
 ---
 
 Today I'm continuing to day 6 of [100 Days of Swift](https://www.hackingwithswift.com/100). Today we're back on closures. I use closures a lot in Swift and Objective-C, but mostly by recipe. This recipe/copypasta code is exactly what I'm trying to get past with 100 Days of Swift, so let's dig in.
