--- a/_posts/2020-02-15-100-days-swift-day-7.md
+++ b/_posts/2020-02-15-100-days-swift-day-7.md
@@ -3,6 +3,7 @@ layout: post
 title: Closures, part 2
 categories: swift
 date: 2020-02-15 17:14:15
+author: alex
 ---
 
 Another day of [100 Days of Swift](https://www.hackingwithswift.com/100), with more closure confusion this time. Closure syntax is complicated on its own, without even considering all of the shorthand and optional syntactic structures, from trailing closure syntax. The confusion is compounded by the way that the Xcode editor will suggest some shorthand but not others.
