--- a/_posts/2020-02-16-100-days-swift-day-8.md
+++ b/_posts/2020-02-16-100-days-swift-day-8.md
@@ -3,6 +3,7 @@ layout: post
 title: Structs, part 1
 categories: swift
 date: 2020-02-16 10:56:00
+author: alex
 ---
 
 I'm done with a full week of [100 Days of Swift](https://www.hackingwithswift.com/100)! For some reason, structs make me happy. I just like them. They were exotic and cool when I was learning C to hack on the Linux kernel. They're still cool today, now that value types and immutability are the hotness.
