--- a/_posts/2020-02-17-100-days-swift-day-9.md
+++ b/_posts/2020-02-17-100-days-swift-day-9.md
@@ -3,6 +3,7 @@ layout: post
 title: Structs, part 2
 categories: swift
 date: 2020-02-17 12:18:29
+author: alex
 ---
 
 Another day of [100 Days of Swift](https://www.hackingwithswift.com/100) in the books! Today I finished the section on structs. I'd forgotten a few things, so let's dive in.
