--- a/_posts/2020-02-18-100-days-swift-day-10.md
+++ b/_posts/2020-02-18-100-days-swift-day-10.md
@@ -3,6 +3,7 @@ layout: post
 title: Swift Classes
 categories: swift
 date: 2020-02-18 23:33:51
+author: alex
 ---
 
 Late day of [100 Days of Swift](https://www.hackingwithswift.com/100) today, too much work and other stuff to do. I'll just do a short blog post.
