--- a/_posts/2020-02-19-100-days-swift-day-11.md
+++ b/_posts/2020-02-19-100-days-swift-day-11.md
@@ -3,6 +3,7 @@ layout: post
 title: Swift Protocols & Extensions
 categories: swift
 date: 2020-02-19 21:37:32
+author: Alex
 ---
 
 Another late day of [100 Days of Swift](https://www.hackingwithswift.com/100) today, I spent all day grinding on iNat vision stuff. Hopefully some of the visualizations from that will make their way into a new blog post soon.
