--- a/_posts/2020-02-10-100-days-swift-day-2.md
+++ b/_posts/2020-02-10-100-days-swift-day-2.md
@@ -3,6 +3,7 @@ layout: post
 title: Swift Complex Data Types
 categories: swift
 date: 2020-02-10 11:50:00
+author: alex
 ---
 
 Yay, on to day 2 of [100 Days of Swift](https://www.hackingwithswift.com/100)!
