--- a/_posts/2020-02-11-100-days-swift-day-3.md
+++ b/_posts/2020-02-11-100-days-swift-day-3.md
@@ -3,6 +3,7 @@ layout: post
 title: Swift Operators & Conditions
 categories: swift
 date: 2020-02-11 11:35:00
+author: alex
 ---
 
 Onward to day 3 of [100 Days of Swift](https://www.hackingwithswift.com/100)!
