add buckeye image

--- a/_posts/2022-06-03-back-to-it.md
+++ b/_posts/2022-06-03-back-to-it.md
@@ -5,8 +5,11 @@ categories: swift
 date: 2022-06-03 12:23:20
 author: alex
 tags: swift swiftui
+image: /assets/buckeye.jpg
 ---
 
 It's been a long time since I worked on anything here, I took a long break from Swift & Generative Art work when my job shifted to full time computer vision and machine learning. But I've been a little disappointed that I never finished this Hundred Days of SwiftUI thing, so I'm rolling back into it. I started over from the beginning a couple of weeks ago, and worked my way up to day 27 today.
 
 I might even get back into generative art soon - I sorta lost interest when all the NFT stuff was blowing up, so many people diving into the generative art world and so many rug pulls and people looking to make a quick buck. Now that the boom seems to have ended and attention has moved on, it'd be nice to get back into it. I'd especially like to try connecting generative art, procedural modeling, and ARKit.
+
+Since I haven't been doing any generative art stuff, here's a photo of a buckeye that I saw this past weekend.
