add buckeye image to page

--- a/_posts/2022-06-03-back-to-it.md
+++ b/_posts/2022-06-03-back-to-it.md
@@ -13,3 +13,5 @@ It's been a long time since I worked on anything here, I took a long break from 
 I might even get back into generative art soon - I sorta lost interest when all the NFT stuff was blowing up, so many people diving into the generative art world and so many rug pulls and people looking to make a quick buck. Now that the boom seems to have ended and attention has moved on, it'd be nice to get back into it. I'd especially like to try connecting generative art, procedural modeling, and ARKit.
 
 Since I haven't been doing any generative art stuff, here's a photo of a buckeye that I saw this past weekend.
+
+![Buckeye](/assets/buckeye.jpg)
