https link for d3

--- a/_posts/2022-11-27-d3.md
+++ b/_posts/2022-11-27-d3.md
@@ -8,7 +8,7 @@ tags: d3 inat
 image: /assets/inat_obs_states_chart_race.png
 ---
 
-<script src="http://d3js.org/d3.v7.min.js"></script>
+<script src="https://d3js.org/d3.v7.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/d3-array@3"></script>
 <script src="https://cdn.jsdelivr.net/npm/d3-time@3"></script>
 <script src="https://cdn.jsdelivr.net/npm/d3-time-format@4"></script>
